fix radio button being cut off in safari

--- a/src/design-system/components/atoms/inputs/radio-button/radio-button.module.css
+++ b/src/design-system/components/atoms/inputs/radio-button/radio-button.module.css
@@ -1,7 +1,7 @@
 .radioButton {
   &input[type="radio"]{
     height: 1rem;
-    width: 1rem;
+    width: 1.25rem;
     margin: 0;
     
     &.error {
